force-app/main/default/objects/ConfigurationEvent__e/ConfigurationEvent__e.object-meta.xml
<CustomObject>
    <description>Event to initiate and control processing of Configurations and Prices</description>
    <label>Configuration Event</label>
    <pluralLabel>Configuration Events</pluralLabel>
</CustomObject>