force-app/main/default/objects/ConfigurationEvent__e/fields/blindsJSON__c.field-meta.xml
<CustomField>
    <fullName>blindsJSON__c</fullName>
    <label>blindsJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>