force-app/main/default/objects/ConfigurationEvent__e/fields/configAction__c.field-meta.xml
<CustomField>
    <fullName>configAction__c</fullName>
    <label>configAction</label>
    <length>25</length>
    <type>Text</type>
</CustomField>