force-app/main/default/objects/ConfigurationEvent__e/fields/configId__c.field-meta.xml
<CustomField>
    <fullName>configId__c</fullName>
    <description>Reference to the Salesforce Configuration (Plan) Record</description>
    <label>configId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>