force-app/main/default/objects/ConfigurationEvent__e/fields/configJSON__c.field-meta.xml
<CustomField>
    <fullName>configJSON__c</fullName>
    <description>JSON Representation of the Configuration Objects</description>
    <label>configJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>