force-app/main/default/objects/ConfigurationEvent__e/fields/configType__c.field-meta.xml
<CustomField>
    <fullName>configType__c</fullName>
    <description>Indicates the Type of Configuration this Event Relates to
-&gt; Any,Visual, Blinds, Pricing, Items</description>
    <label>configType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>