force-app/main/default/objects/ConfigurationEvent__e/fields/documentId__c.field-meta.xml
<CustomField>
    <fullName>documentId__c</fullName>
    <label>documentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>