force-app/main/default/objects/ConfigurationEvent__e/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <label>externalId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>