force-app/main/default/objects/ConfigurationEvent__e/fields/itemJSON__c.field-meta.xml
<CustomField>
    <fullName>itemJSON__c</fullName>
    <description>JSON Representation of the Line Items</description>
    <label>itemJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>