force-app/main/default/objects/ConfigurationEvent__e/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <description>The Type of Record</description>
    <label>objectType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>