force-app/main/default/objects/ConfigurationEvent__e/fields/pricingJSON__c.field-meta.xml
<CustomField>
    <fullName>pricingJSON__c</fullName>
    <description>String that contains the JSON representation of the Pricing Items as received from Visual</description>
    <label>pricingJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>