force-app/main/default/objects/ConfigurationEvent__e/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <description>Id of the Current Record</description>
    <label>recordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>