force-app/main/default/objects/ConfigurationEvent__e/fields/structureJSON__c.field-meta.xml
<CustomField>
    <fullName>structureJSON__c</fullName>
    <description>The String to hold the JSON of the Structure</description>
    <label>structureJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>