force-app/main/default/objects/ConfigurationEvent__e/fields/visualPlanId__c.field-meta.xml
<CustomField>
    <fullName>visualPlanId__c</fullName>
    <label>visualPlanId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>